--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.4.4",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "lottie-react": "^2.2.1",
+    "notistack": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.6",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.50.0",
     "web-vitals": "^1.0.1",
-    "web3": "^1.5.0"
+    "web3": "^1.5.0",
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "craco start",
