--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@craco/craco": "^6.2.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.6.2",
+    "@restart/context": "^2.1.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "antd": "^4.19.5",
+    "craco-less": "^2.0.0",
     "ethers": "^5.4.4",
+    "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "lottie-react": "^2.2.1",
     "notistack": "^2.0.4",
