--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lottie-react": "^2.2.1",
     "notistack": "^2.0.4",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.6",
     "react-redux": "^7.2.4",
