--- a/package.json
+++ b/package.json
@@ -1,45 +1,35 @@
 {
-  "name": "dappstarter",
+  "name": "capx-lend-v1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.2.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.6.2",
+    "@craco/craco": "^6.4.3",
     "@restart/context": "^2.1.4",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
+    "classnames": "^2.3.1",
     "craco-less": "^2.0.0",
-    "ethers": "^5.4.4",
-    "i18next": "^21.6.16",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "lottie-react": "^2.2.1",
-    "notistack": "^2.0.4",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.16.6",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.50.0",
-    "web-vitals": "^1.0.1",
-    "web3": "^1.5.0",
-    "web3-react": "^5.0.5"
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start:old": "react-scripts start",
+    "build:old": "react-scripts build",
+    "test:old": "react-scripts test",
+    "eject": "react-scripts eject",
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
@@ -58,10 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
 }
