--- a/package.json
+++ b/package.json
@@ -3,26 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.3",
+    "@apollo/client": "^3.6.0",
+    "@craco/craco": "6.4.3",
     "@restart/context": "^2.1.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
+    "bignumber.js": "^9.0.2",
     "classnames": "^2.3.1",
-    "craco-less": "^2.0.0",
+    "craco-less": "1.20.0",
     "ethers": "^5.6.4",
     "react": "^18.0.0",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "wagmi": "^0.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start:old": "react-scripts start",
