--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "craco-less": "^2.0.0",
+    "ethers": "^5.6.4",
     "node": "^14.19.0",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
@@ -21,6 +23,7 @@
     "react-scripts": "^4.0.0",
     "recharts": "^2.1.9",
     "redux-thunk": "^2.4.1",
+    "wagmi": "^0.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
