--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "@apollo/client": "^3.6.0",
     "@craco/craco": "6.4.3",
     "@restart/context": "^2.1.4",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "antd": "^4.19.5",
     "bignumber.js": "^9.0.2",
     "classnames": "^2.3.1",
     "craco-less": "1.20.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.6.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
