--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   "scripts": {
     "start:old": "react-scripts start",
     "build:old": "react-scripts build",
-    "test": "react-scripts test",
+    "test:old": "react-scripts test",
     "eject": "react-scripts eject",
     "start": "craco start",
-    "build": "craco build"
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
