--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.19.2",
+    "antd": "^4.19.5",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "craco-less": "^2.0.0",
@@ -20,7 +20,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^5.0.1",
     "redux-thunk": "^2.4.1",
     "wagmi": "^0.3.0",
     "web-vitals": "^2.1.4"
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "react-error-overlay": "6.0.9"
   }
 }
