--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.0",
-    "@craco/craco": "6.4.3",
+    "@craco/craco": "6.2.0",
     "@restart/context": "^2.1.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "antd": "^4.19.5",
     "bignumber.js": "^9.0.2",
     "classnames": "^2.3.1",
     "craco-less": "1.20.0",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.6.4",
+    "graphql": "^16.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
@@ -23,9 +24,8 @@
     "react-scripts": "4.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "wagmi": "^0.3.0",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.7.3"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start:old": "react-scripts start",
