--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^5.6.4",
     "graphql": "^16.4.0",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
