update issue and ui change

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "ethers": "^5.6.4",
     "graphql": "^16.4.0",
     "react": "^17.0.2",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-scrollbars-custom": "^4.0.27",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.0.1",
