--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "craco-less": "1.20.0",
     "ethers": "^5.6.4",
     "graphql": "^16.4.0",
+    "lottie-react": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
