--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-react": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.0",
     "react-redux": "^8.0.1",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.2.0",
