--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.0",
-    "@craco/craco": "6.2.0",
+    "@craco/craco": "^6.2.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@restart/context": "^2.1.4",
     "@testing-library/jest-dom": "^5.11.4",
